--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,6 +48,7 @@ dependencies {
 
 
     implementation "androidx.lifecycle:lifecycle-reactivestreams-ktx:2.9.1"
+    implementation 'androidx.work:work-runtime-ktx:2.10.2'
 
 
     def room_version = "2.7.1"
